testsuite/tests/typing-recmod/t01bad.compilers.reference
File "t01bad.ml", line 10, characters 15-35:
10 | module rec A : sig type t = A.t end = struct type t = A.t end;;
                    ^^^^^^^^^^^^^^^^^^^^
Error: The type abbreviation A.t is cyclic
